WebCore:

2008-03-20  Aaron Golden  <aegolden@gmail.com>

        Reviewed by Darin and David Kilzer.

        Addresses <http://bugs.webkit.org/show_bug.cgi?id=15263>, which caused certain marquees to not display.

        Test: fast/html/marquee-scroll.html

        * html/HTMLMarqueeElement.cpp:
        (WebCore::HTMLMarqueeElement::parseMappedAttribute):

LayoutTests:

2008-03-20  Aaron Golden  <aegolden@gmail.com>

        Reviewed by Darin and David Kilzer.

        - test for <http://bugs.webkit.org/show_bug.cgi?id=15263>, which caused certain marquees to not display.

        * fast/html/marquee-scroll.html: Added.
        * platform/mac/fast/html/marquee-scroll-expected.checksum: Added.
        * platform/mac/fast/html/marquee-scroll-expected.png: Added.
        * platform/mac/fast/html/marquee-scroll-expected.txt: Added.



Canonical link: https://commits.webkit.org/24857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31178 268f45cc-cd09-0410-ab3c-d52691b4dbfc